add smooth scroll to sections

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="nav">
                 <h1 class="nav__logo">WA.</h1>
                 <ul class="menu ">
-                    <li data-section="Home" class="menu-item menu-item--active"><a href="#" class="menu-link ">Home</a></li>
-                    <li data-section="About" class="menu-item"><a href="#" class="menu-link">About us</a></li>
-                    <li data-section="Services" class="menu-item"><a href="#" class="menu-link"></a>Services</li>
+                    <li data-section="home" class="menu-item menu-item--active"><a href="#" class="menu-link ">Home</a></li>
+                    <li data-section="about" class="menu-item"><a href="#" class="menu-link">About us</a></li>
+                    <li data-section="services" class="menu-item"><a href="#" class="menu-link"></a>Services</li>
                     <li data-section="resume" class="menu-item"><a href="#" class="menu-link">Resume</a></li>
                     <li data-section="portfolio" class="menu-item"><a href="#" class="menu-link">Portfolio</a></li>
                     <li data-section="pricing" class="menu-item"><a href="#" class="menu-link">Pricing</a></li>
@@ -29,7 +29,7 @@
         </div>
     </header>   
     <main class="main">
-            <section class="Home">
+            <section class="home">
                 <div class="container">
                     <div class="row aling-items-center wrap-revers">
                         <div class="col-12 col-lg-7 ">
@@ -50,7 +50,7 @@
                 </div>
                                                     
             </section>
-            <section class="About">
+            <section class="about">
                 <div class="container">
                     <div class="titel-box">
                         <h2 class="titel-box__name">About Us</h2>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </section>
-            <section class="Services">
+            <section class="services">
                 <div class="container">
                     <div class="titel-box">
                         <h2 class="titel-box__name">Services</h2>
